# BizBooster

./: .gitignore  BizBooster.kdev4  CMakeLists.txt  LICENSE  README.md
Api/: CMakeLists.txt
Api/include/: AbstractHelper.h  Api.h  ApiCode.h  ApiDef.h  ApiError.h  ApiHelper.h  ApiUtils.h  AppSession.h  AppSessionManager.h  BaseHelper.h  BaseInput.h  BaseOutput.h  LibApi.h  LogInHelper.h  LogInInput.h  LogInOutput.h  LoggedInHelper.h  LoggedInInput.h  LoggedInOutput.h  RegisterUserHelper.h  RegisterUserInput.h  RegisterUserOutput.h  SOFactory.h  Serializable.h  ServiceFacade.h  User.h
Api/src/: AbstractHelper.cpp  Api.cpp  ApiError.cpp  ApiHelper.cpp  ApiUtils.cpp  AppSession.cpp  AppSessionManager.cpp  BaseInput.cpp  BaseOutput.cpp  LibApi.cpp  LogInHelper.cpp  LogInInput.cpp  LogInOutput.cpp  LoggedInHelper.cpp  LoggedInInput.cpp  LoggedInOutput.cpp  RegisterUserHelper.cpp  RegisterUserInput.cpp  RegisterUserOutput.cpp  SOFactory.cpp  Serializable.cpp  ServiceFacade.cpp  User.cpp
App/: CMakeLists.txt  app.properties  bizbooster.properties  wt_config.xml
App/include/: AppContainer.h  AppDisposer.h  AppInitializer.h  Application.h  AuthView.h  AuthWidget.h  BizBoosterDef.h  LogInWidget.h  LoginWidget.h  RegistrationView.h  UserDetailsModel.h  WAppDef.h  WtAuthServices.h  WtUserService.h
App/src/: AppContainer.cpp  AppDisposer.cpp  AppInitializer.cpp  Application.cpp  AuthView.cpp  LogInWidget.cpp  LoginWidget.cpp  RegistrationView.cpp  UserDetailsModel.cpp  WtAuthServices.cpp  WtUserService.cpp
Cipher/: CMakeLists.txt
Cipher/include/: BoostRandGenerator.h  CipherDef.h  HashGenerator.h  LibCipher.h  OsslHwRandGenerator.h  OsslRandGenerator.h  OsslSwRandGenerator.h  PassWordEncoder.h  PasswordEncoder.h  RndGenerator.h  WtHashGenerator.h  WtRndGenerator.h
Cipher/src/: BoostRandGenerator.cpp  LibCipher.cpp  OsslHwRandGenerator.cpp  PassWordEncoder.cpp  PasswordEncoder.cpp  WtHashGenerator.cpp  WtRndGenerator.cpp
CipherTest/: CMakeLists.txt
CipherTest/src/: SimpleRandomGenerator.cpp
Client/: CMakeLists.txt  Client.ini  client.properties  lang.en_US.properties
Client/include/: CilentConfig.h  Client.h  ClientConstant.h  ClientDisposer.h  ClientInitializer.h
Client/src/: Client.cpp  ClientDisposer.cpp  ClientInitializer.cpp
Cmarshal/: CMakeLists.txt
Cmarshal/include/: AbstractSerializable.h  Deserializer.h  Getter.h  Json.h  SOFactory.h  Serializable.h  SerializableT.h  Serializer.h  Setter.h  TypeTratits.h
Cmarshal/src/: Json.cpp  SOFactory.cpp
CmarshalTest/: CMakeLists.txt
CmarshalTest/include/: TestSerializableBase.h
CmarshalTest/src/: BoostOptionalTest.cpp  DeserializeDrivedClassTest.cpp  DeserializeObjectTest.cpp  DeserializePOD.cpp  DeserializePrimitiveTest.cpp  DeserializeRvalueReferenceTest.cpp  DeserializeVectorTest.cpp  EmptyClassTest.cpp  EnumTest.cpp  SeializeNestedObjecTest.cpp  SerializeConstantTest.cpp  SerializeDoublePointerTest.cpp  SerializeDrivedClassTest.cpp  SerializeObjectTest.cpp  SerializePremitiveTest.cpp  SerializeVectorTest.cpp  TypeTraitsTest.cpp  main.cpp
Common/: CMakeLists.txt
Common/include/: AppCommonDef.h  AppConfig.h  AppConstant.h  AppDef.h  AppDisposer.h  AppError.h  AppException.h  AppFactory.h  BaseConfigReader.h  BaseHashFunction.h  BaseLogger.h  BasePropertyReader.h  Common.h  ConfigReader.h  Converter.h  DateTimeUtils.h  Disposable.h  FileUtility.h  FileUtils.h  LibCommon.h  OFStream.h  OSTDStream.h  OStream.h  PassWordEncoder.h  RegisterClass.h  SObjectFactory.h  Serializeable.h  SharedObject.h  SingleTon.h  StringUtility.h  StringUtils.h  Thread.h  WtHashFunction.h
Common/src/: AppDisposer.cpp  AppException.cpp  AppFactory.cpp  BaseConfigReader.cpp  BaseLogger.cpp  BasePropertyReader.cpp  Common.cpp  Converter.cpp  DateTimeUtils.cpp  Disposable.cpp  FileUtility.cpp  FileUtils.cpp  LibCommon.cpp  OFStream.cpp  OSTDStream.cpp  OStream.cpp  PassWordEncoder.cpp  SObjectFactory.cpp  Serializeable.cpp  SharedObject.cpp  StringUtility.cpp  StringUtils.cpp  Thread.cpp  WtHashFunction.cpp
Cruxdb/: CMakeLists.txt
Cruxdb/include/: AbstractAuditableEntity.h  AbstractBaseEntity.h  AbstractSimpleEntity.h  AppSetting.h  AppSettingService.h  AuditableEntity.h  AuthServices.h  AuthUtils.h  AuthenticatedRequester.h  BaseEntity.h  BaseService.h  CruxdbDef.h  DMUpgrade.h  DMUpgrade_1.h  Dao.h  DataModelManager.h  DboTypes.h  InternalRootRequester.h  LibCruxdb.h  Requester.h  Roles.h  SerializableAuditableEntity.h  SerializableSimpleEntity.h  SimpleEntity.h  Status.h  User.h  UserService.h  WtDaoImp.h  WtPgConnection.h  WtSession.h
Cruxdb/src/: AbstractAuditableEntity.cpp  AbstractBaseEntity.cpp  AbstractSimpleEntity.cpp  AppSettigns.cpp  AppSettingService.cpp  AuditableEntity.cpp  AuthServices.cpp  AuthUtils.cpp  AuthenticatedRequester.cpp  BaseEntity.cpp  BaseService.cpp  DMUpgrade_1.cpp  DataModelManager.cpp  InternalRootRequester.cpp  LibCruxdb.cpp  Roles.cpp  SimpleEntity.cpp  Status.cpp  User.cpp  UserService.cpp  WtDaoImp.cpp  WtPgConnection.cpp  WtSession.cpp
Dbo/: CMakeLists.txt  dbo.properties
Dbo/include/: AppSession.h  AppSetting.h  AuditableEntity.h  AuthServices.h  AuthUtils.h  AuthenticatedRequester.h  BaseEntity.h  BaseRequester.h  Connector.h  DMUpgrade.h  DMUpgrade_1.h  Dal.h  Dao.h  DataModelManager.h  DboConfig.h  DboConstant.h  DboDef.h  DboTypes.h  InternalRootRequester.h  PGSqlConnector.h  PGSqlDaoImp.h  Requester.h  Roles.h  SerializableAuditableEntity.h  SerializableEntity.h  SerializableSimpleEntity.h  Session.h  SessionManager.h  SimpleEntity.h  Status.h  User.h  WtConnection.h  WtDaoImp.h  WtPgConnection.h  WtSession.h
Dbo/src/: AppSession.cpp  AppSettigns.cpp  AuditableEntity.cpp  AuthServices.cpp  AuthUtils.cpp  AuthenticatedRequester.cpp  BaseEntity.cpp  Connector.cpp  (+17 more)
Fio/: CMakeLists.txt
Json/: CMakeLists.txt
JsonTest/: CMakeLists.txt
LCrypto/: CMakeLists.txt
Logfig/: CMakeLists.txt
Mocxygen/: CMakeLists.txt
Pantoon/: CMakeLists.txt  pantoon.properties
Server/: CMakeLists.txt  Server.ini  Server.ini~  server.properties
Service/: CMakeLists.txt  service.properties
(+227 files in other folders)
